--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-sacle=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
     <body>
@@ -89,13 +90,15 @@
                         <li>Billetera Santa Fe (de Lunes a Viernes)</li>
                     </ul>
             </div>  
+            <div class="mapa">
+              <a href="https://goo.gl/maps/NgxcVFmnAeheLp6L9" class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9603.368393242732!2d-60.76887738987468!3d-31.680271183443317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a89ce69e8903%3A0xd2c9fdc05b8b6ad7!2sLCD%2C%20C.%20Belgrano%203758%2C%20S3016%20Santo%20Tom%C3%A9%2C%20Provincia%20de%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1685145697966!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></a>
+            </div>
             <footer>
                 <h3>Contactanos</h3>
                 <h4>Numero de telefono/Whatsapp: <strong>+54 342 519 3920</strong></h4>
                 <h3>Donde encontrarnos</h3>
                 <h4>Belgrano 3758, Santo Tomé, Santa Fe</h4>
             </footer>
-            <a href="https://goo.gl/maps/NgxcVFmnAeheLp6L9" class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9603.368393242732!2d-60.76887738987468!3d-31.680271183443317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a89ce69e8903%3A0xd2c9fdc05b8b6ad7!2sLCD%2C%20C.%20Belgrano%203758%2C%20S3016%20Santo%20Tom%C3%A9%2C%20Provincia%20de%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1685145697966!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe></a>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
