--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-sacle=1">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   </head>
       <body>
           <div class="grid-container">
-              <header>
+              <header class="animate__animated animate__fadeInDown">
                   <h1>Bienvenidos a Pollería y Almacen MB</h1>
               </header>
               <nav class="navbar navbar-expand-lg navbar-light bg-light">
