--- a/precios.html
+++ b/precios.html
@@ -6,10 +6,11 @@
             <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial-sacle=1">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         </head>
     <body>
         <div class="grid-container">
-            <header>
+            <header class="animate__animated animate__fadeInDown">
                 <h1>Bienvenidos a Pollería y Almacen MB</h1>
             </header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -30,7 +31,7 @@
                   </div>
                 </div>
               </nav>
-            <table border="2" class="tabla1">
+            <table border="2" class="animate__animated animate__backInLeft tabla1 zoom">
 
                 <tr>
                     <th align="center" valign="middle"  bgcolor="#ADD8E6">Producto</th>
@@ -73,7 +74,7 @@
                     <td bgcolor="#AEF143"> - </td>
                 </tr>
             </table>
-            <table border="2" class="tabla2">
+            <table border="2" class="animate__animated animate__backInRight tabla2 zoom">
                 <tr>
                     <th align="center" valign="middle"  bgcolor="#ADD8E6"></th>
                     <th align="center" valign="middle"  bgcolor="#ADD8E6">POR ENCARGUE</th>
