--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-      <meta name="viewport" content="width=device-width, initial-sacle=1">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+      <meta name="viewport" content="width=device-width, initial-sacle=1">
+      <meta name="description" content="Polleria-MB, es un negocio que inicio en plena pandemia y tabaja con las mejores calidades de productos de granja, desde pollos hasta huevos y ¡Demas!">
+      <meta name="keywords" content="Polleria, MB, pollo, patamuslo, milanesa, parrillero">
+      <meta property="og:type" content="polleria">
+      <meta property="og:title" content="Pollería y Almacen MB">
+      <meta property="og:description" content="Pollería y Almacen MB - Los mejores pollos de Santo Tomé">
+      <meta property="og:image" content="img/logo.png">
+      <meta property="og:url" content="https://monticolojuan.github.io/">
   </head>
       <body>
           <div class="grid-container">
@@ -142,7 +149,7 @@
                           <li>Billetera Santa Fe (de Lunes a Viernes)</li>
                       </ul>
               </div>  
-              <div class="mapa">
+              <div class="mapa zoom">
                 <a href="https://goo.gl/maps/NgxcVFmnAeheLp6L9"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9603.368393242732!2d-60.76887738987468!3d-31.680271183443317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a89ce69e8903%3A0xd2c9fdc05b8b6ad7!2sLCD%2C%20C.%20Belgrano%203758%2C%20S3016%20Santo%20Tom%C3%A9%2C%20Provincia%20de%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1685145697966!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></a>
               </div>
               <footer>
