--- a/precios.html
+++ b/precios.html
@@ -7,6 +7,13 @@
             <meta name="viewport" content="width=device-width, initial-sacle=1">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+            <meta name="description" content="Polleria-MB, es un negocio que inicio en plena pandemia y tabaja con las mejores calidades de productos de granja, desde pollos hasta huevos y ¡Demas!">
+            <meta name="keywords" content="Polleria, MB, pollo, patamuslo, milanesa, parrillero">
+            <meta property="og:type" content="polleria">
+            <meta property="og:title" content="Pollería y Almacen MB">
+            <meta property="og:description" content="Pollería y Almacen MB - Los mejores pollos de Santo Tomé">
+            <meta property="og:image" content="img/logo.png">
+            <meta property="og:url" content="https://monticolojuan.github.io/">
         </head>
     <body>
         <div class="grid-container">
