--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                           <li>Billetera Santa Fe (de Lunes a Viernes)</li>
                       </ul>
               </div>  
-              <div class="mapa zoom">
+              <div class="mapa">
                 <a href="https://goo.gl/maps/NgxcVFmnAeheLp6L9"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9603.368393242732!2d-60.76887738987468!3d-31.680271183443317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a89ce69e8903%3A0xd2c9fdc05b8b6ad7!2sLCD%2C%20C.%20Belgrano%203758%2C%20S3016%20Santo%20Tom%C3%A9%2C%20Provincia%20de%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1685145697966!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></a>
               </div>
               <footer>
