--- a/precios.html
+++ b/precios.html
@@ -12,7 +12,7 @@
             <meta property="og:title" content="Pollería y Almacen MB">
             <meta property="og:description" content="Pollería y Almacen MB - Los mejores pollos de Santo Tomé">
             <meta property="og:image" content="img/logo.png">
-            <meta property="og:url" content="https://monticolojuan.github.io/">
+            <meta property="og:url" content="https://monticolojuan.github.io/precios.html">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         </head>
     <body>
