--- a/precios.html
+++ b/precios.html
@@ -12,7 +12,7 @@
             <meta property="og:title" content="Pollería y Almacen MB">
             <meta property="og:description" content="Pollería y Almacen MB - Los mejores pollos de Santo Tomé">
             <meta property="og:image" content="img/logo.png">
-            <meta property="og:url" content="https://monticolojuan.github.io/precios.html">
+            <meta property="og:url" content="https://monticolojuan.github.io/">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         </head>
     <body>
@@ -38,7 +38,7 @@
                   </div>
                 </div>
               </nav>
-            <table border="2" class="tabla1 animate__animated animate__backInLeft">
+            <table border="2" class="tabla1 animate__animated animate__bounceIn">
 
                 <tr>
                     <th align="center" valign="middle"  bgcolor="#ADD8E6">Producto</th>
@@ -81,7 +81,7 @@
                     <td bgcolor="#AEF143"> - </td>
                 </tr>
             </table>
-            <table border="2" class="tabla2 animate__animated animate__backInRight">
+            <table border="2" class="tabla2 animate__animated animate__bounceIn">
                 <tr>
                     <th align="center" valign="middle"  bgcolor="#ADD8E6"></th>
                     <th align="center" valign="middle"  bgcolor="#ADD8E6">POR ENCARGUE</th>
