--- a/precios.html
+++ b/precios.html
@@ -1,118 +1,130 @@
 <html>
-        <head>
-            <title >Pollería y Almacen MB</title>
-            <link rel="icon" href="img/logo.png">
-            <link rel="stylesheet" href="css/estilos-precios.css">
-            <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-            <meta name="viewport" content="width=device-width, initial-sacle=1">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-            <meta name="description" content="Polleria-MB, es un negocio que inicio en plena pandemia y tabaja con las mejores calidades de productos de granja, desde pollos hasta huevos y ¡Demas!">
-            <meta name="keywords" content="Polleria, MB, pollo, patamuslo, milanesa, parrillero">
-            <meta property="og:type" content="polleria">
-            <meta property="og:title" content="Pollería y Almacen MB">
-            <meta property="og:description" content="Pollería y Almacen MB - Los mejores pollos de Santo Tomé">
-            <meta property="og:image" content="img/logo.png">
-            <meta property="og:url" content="https://monticolojuan.github.io/">
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        </head>
-    <body>
-        <div class="grid-container">
-            <header class="animate__animated animate__fadeInDown">
-                <h1>Bienvenidos a Pollería y Almacen MB</h1>
-            </header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="index.html"><img src="img/logo.png" width="10%" height="10%"></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="precios.html">Precios</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-            <table border="2" class="tabla1 animate__animated animate__bounceIn">
 
-                <tr>
-                    <th align="center" valign="middle"  bgcolor="#ADD8E6">Producto</th>
-                    <th align="center" valign="middle"  bgcolor="#ADD8E6">Precio</th>
-                    <th align="center" valign="middle"  bgcolor="#ADD8E6">Promo</th>
-                </tr>
-                <tr>
-                    <td bgcolor="#AEF143"> Parrilero/Trozado </td>
-                    <td bgcolor="#AEF143"> $550 x Kilo </td>
-                    <td bgcolor="#AEF143"> $1550 x 3 Kilos </td>
-                </tr>
-                <tr>
-                    <td bgcolor="#AEF143"> Patamuslo </td>
-                    <td bgcolor="#AEF143"> $600 x Kilo </td>
-                    <td bgcolor="#AEF143"> $1700 x 3 Kilos </td>
-                </tr>
-                <tr>
-                    <td bgcolor="#AEF143"> Pechuga c/hueso </td>
-                    <td bgcolor="#AEF143"> $1800 x Kilo</td>
-                    <td bgcolor="#AEF143"> - </td>
-                </tr>
-                <tr>
-                    <td bgcolor="#AEF143"> Pechuga s/hueso </td>
-                    <td bgcolor="#AEF143"> $1850 x Kilo </td>
-                    <td bgcolor="#AEF143"> - </td>
-                </tr>
-                <tr>
-                    <td bgcolor="#AEF143"> Filet de Pollo </td>
-                    <td bgcolor="#AEF143"> $1900 x Kilo </td>
-                    <td bgcolor="#AEF143"> - </td>
-                </tr>
-                <tr>
-                    <td bgcolor="#AEF143"> Milanesas de Pollo </td>
-                    <td bgcolor="#AEF143"> $1350 x Kilo </td>
-                    <td bgcolor="#AEF143"> $2550 x 3 Kilos </td>
-                </tr>
-                <tr>
-                    <td bgcolor="#AEF143"> Pollo entero </td>
-                    <td bgcolor="#AEF143"> $800 x Kilo </td>
-                    <td bgcolor="#AEF143"> - </td>
-                </tr>
-            </table>
-            <table border="2" class="tabla2 animate__animated animate__bounceIn">
-                <tr>
-                    <th align="center" valign="middle"  bgcolor="#ADD8E6"></th>
-                    <th align="center" valign="middle"  bgcolor="#ADD8E6">POR ENCARGUE</th>
-                    <th align="center" valign="middle"  bgcolor="#ADD8E6"></th>
-                </tr>
-                <tr>
-                    <th align="center" valign="middle"  bgcolor="#ADD8E6">Producto</th>
-                    <th align="center" valign="middle"  bgcolor="#ADD8E6">Precio</th>
-                    <th align="center" valign="middle"  bgcolor="#ADD8E6">Promo</th>
-                </tr>
-                <tr>
-                    <td bgcolor="#AEF143"> Arrollado de Pollo</td>
-                    <td bgcolor="#AEF143"> $1860 x Kilo </td>
-                    <td bgcolor="#AEF143"> - </td>
-                </tr>
-                <tr>
-                    <td bgcolor="#AEF143"> Albondigas de Pollo </td>
-                    <td bgcolor="#AEF143"> $1640 x Kilo </td>
-                    <td bgcolor="#AEF143"> - </td>
-                </tr>
-            </table>
-            <div class="mapa">
-                <a href="https://goo.gl/maps/NgxcVFmnAeheLp6L9"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9603.368393242732!2d-60.76887738987468!3d-31.680271183443317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a89ce69e8903%3A0xd2c9fdc05b8b6ad7!2sLCD%2C%20C.%20Belgrano%203758%2C%20S3016%20Santo%20Tom%C3%A9%2C%20Provincia%20de%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1685145697966!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></a>
+<head>
+    <title>Pollería y Almacen MB</title>
+    <link rel="icon" href="img/logo.png">
+    <link rel="stylesheet" href="css/estilos-precios.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-sacle=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <meta name="description"
+        content="Polleria-MB, es un negocio que inicio en plena pandemia y tabaja con las mejores calidades de productos de granja, desde pollos hasta huevos y ¡Demas!">
+    <meta name="keywords" content="Polleria, MB, pollo, patamuslo, milanesa, parrillero">
+    <meta property="og:type" content="polleria">
+    <meta property="og:title" content="Pollería y Almacen MB">
+    <meta property="og:description" content="Pollería y Almacen MB - Los mejores pollos de Santo Tomé">
+    <meta property="og:image" content="img/logo.png">
+    <meta property="og:url" content="https://monticolojuan.github.io/">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+
+<body>
+    <div class="grid-container">
+        <header class="animate__animated animate__fadeInDown">
+            <h1>Bienvenidos a Pollería y Almacen MB</h1>
+        </header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html"><img src="img/logo.png" width="10%" height="10%"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="precios.html">Precios</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <footer>
-                <h3>Contactanos</h3>
-                <h4>Numero de telefono/Whatsapp: <strong>+54 342 519 3920</strong></h4>
-                <h3>Donde encontrarnos</h3>
-                <h4>Belgrano 3758, Santo Tomé, Santa Fe</h4>
-            </footer>
+        </nav>
+        <table border="2" class="tabla1 animate__animated animate__bounceIn">
+
+            <tr>
+                <th align="center" valign="middle" bgcolor="#ADD8E6">Producto</th>
+                <th align="center" valign="middle" bgcolor="#ADD8E6">Precio</th>
+                <th align="center" valign="middle" bgcolor="#ADD8E6">Promo</th>
+            </tr>
+            <tr>
+                <td bgcolor="#AEF143"> Parrilero/Trozado </td>
+                <td bgcolor="#AEF143"> $550 x Kilo </td>
+                <td bgcolor="#AEF143"> $1550 x 3 Kilos </td>
+            </tr>
+            <tr>
+                <td bgcolor="#AEF143"> Patamuslo </td>
+                <td bgcolor="#AEF143"> $600 x Kilo </td>
+                <td bgcolor="#AEF143"> $1700 x 3 Kilos </td>
+            </tr>
+            <tr>
+                <td bgcolor="#AEF143"> Pechuga c/hueso </td>
+                <td bgcolor="#AEF143"> $1800 x Kilo</td>
+                <td bgcolor="#AEF143"> - </td>
+            </tr>
+            <tr>
+                <td bgcolor="#AEF143"> Pechuga s/hueso </td>
+                <td bgcolor="#AEF143"> $1850 x Kilo </td>
+                <td bgcolor="#AEF143"> - </td>
+            </tr>
+            <tr>
+                <td bgcolor="#AEF143"> Filet de Pollo </td>
+                <td bgcolor="#AEF143"> $1900 x Kilo </td>
+                <td bgcolor="#AEF143"> - </td>
+            </tr>
+            <tr>
+                <td bgcolor="#AEF143"> Milanesas de Pollo </td>
+                <td bgcolor="#AEF143"> $1350 x Kilo </td>
+                <td bgcolor="#AEF143"> $2550 x 3 Kilos </td>
+            </tr>
+            <tr>
+                <td bgcolor="#AEF143"> Pollo entero </td>
+                <td bgcolor="#AEF143"> $800 x Kilo </td>
+                <td bgcolor="#AEF143"> - </td>
+            </tr>
+        </table>
+        <table border="2" class="tabla2 animate__animated animate__bounceIn">
+            <tr>
+                <th align="center" valign="middle" bgcolor="#ADD8E6"></th>
+                <th align="center" valign="middle" bgcolor="#ADD8E6">POR ENCARGUE</th>
+                <th align="center" valign="middle" bgcolor="#ADD8E6"></th>
+            </tr>
+            <tr>
+                <th align="center" valign="middle" bgcolor="#ADD8E6">Producto</th>
+                <th align="center" valign="middle" bgcolor="#ADD8E6">Precio</th>
+                <th align="center" valign="middle" bgcolor="#ADD8E6">Promo</th>
+            </tr>
+            <tr>
+                <td bgcolor="#AEF143"> Arrollado de Pollo</td>
+                <td bgcolor="#AEF143"> $1860 x Kilo </td>
+                <td bgcolor="#AEF143"> - </td>
+            </tr>
+            <tr>
+                <td bgcolor="#AEF143"> Albondigas de Pollo </td>
+                <td bgcolor="#AEF143"> $1640 x Kilo </td>
+                <td bgcolor="#AEF143"> - </td>
+            </tr>
+        </table>
+        <div class="mapa">
+            <a href="https://goo.gl/maps/NgxcVFmnAeheLp6L9"><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9603.368393242732!2d-60.76887738987468!3d-31.680271183443317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a89ce69e8903%3A0xd2c9fdc05b8b6ad7!2sLCD%2C%20C.%20Belgrano%203758%2C%20S3016%20Santo%20Tom%C3%A9%2C%20Provincia%20de%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1685145697966!5m2!1ses-419!2sar"
+                    style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe></a>
         </div>
-    
-    </body>
+        <footer>
+            <h3>Contactanos</h3>
+            <h4>Numero de telefono/Whatsapp: <strong>+54 342 519 3920</strong></h4>
+            <h3>Donde encontrarnos</h3>
+            <h4>Belgrano 3758, Santo Tomé, Santa Fe</h4>
+        </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
